--- a/backends/backend-sdl/build.gradle
+++ b/backends/backend-sdl/build.gradle
@@ -36,18 +36,25 @@ task preJni{
 }
 
 /*
+
 PACKAGES: Linux (Ubuntu)
+
 - libdrm-dev
 - libsdl2-dev
 - libgbm-dev
 - ant
+
 PACKAGES: Linux -> Windows Cross-Compilation
+
 - mingw32
 - ant
+
 PACKAGES: Mac
+
 - sdl2
 - glew
 - ant
+
  */
 
 jnigen{
@@ -84,7 +91,7 @@ jnigen{
     add(Windows, x64){
         def path = "SDL2-$sdlVersion/x86_64-w64-mingw32"
         def root = "$rootDir/backends/backend-sdl/jni"
-        headerDirs += ["$path/include/SDL2"]
+        headerDirs += (String[])["$path/include/SDL2"]
         cppFlags += " " + execCmd("sh $root/$path/bin/sdl2-config --cflags")
         cFlags = cppFlags
         libraries = execCmd("sh $root/$path/bin/sdl2-config --static-libs") + " -lopengl32"
@@ -93,7 +100,7 @@ jnigen{
     add(Windows, x32){
         def path = "SDL2-$sdlVersion/i686-w64-mingw32"
         def root = "$rootDir/backends/backend-sdl/jni"
-        headerDirs += ["$path/include/SDL2"]
+        headerDirs +=  (String[])["$path/include/SDL2"]
         cppFlags += " " + execCmd("sh $root/$path/bin/sdl2-config --cflags")
         cFlags = cppFlags
         libraries = execCmd("sh $root/$path/bin/sdl2-config --static-libs") + " -lopengl32"
